syntax = "proto3";

package proto;
option go_package = "github.com/oa-dmitriev/shtrafovnet/proto/gen/go/legalinfo";

import "google/api/annotations.proto";

message Inn {
  string INN = 1;
}

message Info {
  string CompanyName = 1;
  string CeoName = 2;
  string INN = 3;
  string KPP = 4;
}

service LegalInfoFetcher {
  rpc GetInfoByInn (Inn) returns (Info) {
    option (google.api.http) = {
      get: "/v1/inn/{INN}"
    };
  }
}
